fix flawed overflow

--- a/src/styles/newhome.scss
+++ b/src/styles/newhome.scss
@@ -1,6 +1,6 @@
 @use "./variables" as *;
 
-main, body {
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -8,11 +8,19 @@ main, body {
   font-family: Wonderly;
 }
 
-.bg {
-  overflow: hidden;
+.container {
   position: absolute;
-  width: 3 * 1920px;
-  height: 3 * 1920px;
+  display: flex;
+  flex-flow: column wrap;
+  width: 100%;
+  height: 100%;
+  overflow: clip;
+}
+
+.bg {
+  position: absolute;
+  width: 5 * 1920px;
+  height: 5 * 1920px;
 
   .image {
     width: 100%;
